--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,13 +78,6 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 
-project.ext.vectoricons = [
-        iconFontNames: [ 'FontAwesome.ttf'] // Name of the font files you want to copy
-]
-
-apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-
-
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -105,7 +98,7 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "com.googlepay"
+        applicationId "com.example.reactnativegooglepay"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -149,7 +142,6 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.android.gms:play-services-wallet:16.0.0'
     implementation 'com.android.support:appcompat-v7:24.1.1'
-    implementation project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
